Nautilus: Fix invisible texts when renaming file name in Nautilus 3.14.x
This commit is copied from arc-theme:
966778df08c2ee94dfdf55c9281791b0b2121497

Thanks horst3180!

--- a/gtk-3.0/_misc.scss
+++ b/gtk-3.0/_misc.scss
@@ -255,6 +255,14 @@ GfCandidatePopup {
  * Nautilus *
  ************/
 
+EelEditableLabel {
+  // Workaround for invisible text in rename entry in Nautilus 3.14.x
+  // Copied from arc-theme:
+  // 966778df08c2ee94dfdf55c9281791b0b2121497
+
+  &.entry { transition: none; }
+}
+
 .nautilus-canvas-item {
   border-radius: 2px;
 }
