--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -4865,6 +4865,9 @@ GfCandidatePopup .linked > .button:last-child {
 /************
  * Nautilus *
  ************/
+EelEditableLabel.entry {
+  transition: none; }
+
 .nautilus-canvas-item {
   border-radius: 2px; }
 
